--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
+  "engines": {
+    "node": "10.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
